# KcartBot

./: .env.example  .gitignore  README.md  customer.json  k.json  pyproject.toml  pytest.ini  requirements.txt  supplier.json
app/: main.py
app/agents/: agent.py  customer_handlers.py  multilingual_responses.py  supplier_handlers.py
app/api/: routes.py
app/api/v1/: routes.py
app/core/: config.py  rate_limiter.py  tortoise_config.py
app/db/: milvus_handler.py  models.py
app/db/repository/: competitor_price_repository.py  flash_sale_repository.py  order_item_repository.py  product_repository.py  supplier_product_repository.py  transaction_repository.py  user_repository.py
app/services/: __init__.py  chat_service.py  lllm_service.py  llm_service.py
app/tools/: README.md  __init__.py  access_data.py  base.py  database_tool.py  date_tool.py  flash_sale.py  generate_image.py  intent_classifier.py  multilingual_testing.py  schedule_tool.py  search_context.py
app/utils/: DATA_GENERATION_GUIDE.md  MOCK_DATA_SUMMARY.md  README.md  analyze_mock_data.py  dataloader.py  generate_data.py  language_utils.py  mock_competitor_price_data_generate.py  mock_data_generator.py  mock_product_data_generate.py  mock_supplier_product_data_generate.py  mock_transaction_data_generate.py  mock_user_data_generate.py  schedule.py
frontend/: streamlit_app.py
tests/: test_agent.py
